修改静态文件

--- a/static/shareClassCode/index.html
+++ b/static/shareClassCode/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>开学预习</title><script>!function (e, t) {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>开学预习</title><script>!function (e, t) {
     function n() {
       t.body ? t.body.style.fontSize = 12 * o + "px" : t.addEventListener("DOMContentLoaded", n)
     }
@@ -15,4 +15,4 @@
       var a = t.createElement("body"), s = t.createElement("div");
       s.style.border = ".5px solid transparent", a.appendChild(s), i.appendChild(a), 1 === s.offsetHeight && i.classList.add("hairlines"), i.removeChild(a)
     }
-  }(window, document);</script><link href=./static/css/app.a9f11c186c7239b228b894b1b0fdb520.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.fa2211508736e9cdc8dc.js></script><script type=text/javascript src=./static/js/app.413bc3d030c98a569984.js></script></body></html>
+  }(window, document);</script><link href=./static/css/app.a9f11c186c7239b228b894b1b0fdb520.css rel=stylesheet></head><body><div id=app></div><script src=./static/config.js></script><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.fa2211508736e9cdc8dc.js></script><script type=text/javascript src=./static/js/app.7f3913eaaf135ff0bc64.js></script></body></html>
