--- a/static/shareClassCode/index.html
+++ b/static/shareClassCode/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>解题大招课</title><script>!function (e, t) {
+<!DOCTYPE html><html manifest="NOTEXIST.manifest"><head><meta charset=utf-8><meta name=viewport
+                                                      content="width=device-width,initial-scale=1"><title>解题大招课</title><script>!function (e, t) {
     function n() {
       t.body ? t.body.style.fontSize = 12 * o + "px" : t.addEventListener("DOMContentLoaded", n)
     }
